--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - npm install -g @angular/cli
   - npm install -g now
 script:
-  - ng build --prod --base-href https://weilunfoo.github.io/bitcoin-order-app/
+  - ng build --prod --base-href https://weilun-foo.github.io/bitcoin-order-app/
 
   
 deploy:
